notebooks/Exam1_Fall/errors
  File "Eprob3.py", line 5
    argv = program_name file_name
                                ^
SyntaxError: invalid syntax
